testsuite/tests/explicit-dicts/should_fail/Roles1.stderr

Roles1.hs:13:6: error:
    • Explicit dictionary application to: ‘Ord a’
      is not allowed because of instance incoherence:
      In the function type ‘a -> f a -> f a’
        Type variable ‘a’ has role Nominal
    • In the expression:
        (undefined :: Ord a => a -> f a -> f a)
          ((reverseOrd @Int :: Ord a))
      In an equation for ‘f1’:
          f1
            = (undefined :: Ord a => a -> f a -> f a)
                ((reverseOrd @Int :: Ord a))
